--- a/tribute2.html
+++ b/tribute2.html
@@ -5,8 +5,8 @@
 </head>
 <style>
   *{
-  margin:0.5cm;
-  padding:0.5cm;
+  margin:0.2cm;
+  padding:0.2cm;
 }
   img{
    width: 90px;
@@ -28,7 +28,7 @@
     b{
       font-family:Constantia ;
   }
-  html { background-color: rgba(251, 121, 7, 0.905); }
+  html { background-color: rgba(251, 7, 231, 0.905); }
 body { margin:50px; 
   border-radius: 2%;
   background-color: white; }
@@ -41,57 +41,47 @@ h1{
 h2{
   color:orange;
 }
-video{
-  height: 60;
-  
-}
-    
 </style>
   <body>
-      <img  src="adi.jpg" alt="no image found" >
+      <img  src="58h2h1go_s-jaishankar-pti_625x300_13_April_22.webp" alt="no image found" >
     </div>
         <h1>  
-            MR. Yogi Adityanath - Hinduism protector
+            Dr. S jaishankar
         </h1>  
-  <h4></h4>
-<hr><p>  
-    <p>>  When BJP won 325 seats in the elections I was happy and hopeful for my state 
-    and city but the choice of a CM was going to decide a lot of things.</p>
-    <p>>  My parents truly wanted some 'yogi' named person (whom I didn't know or even
-    heard of neither I cared because of my exams) to be the CM .</p>
-    <p>>  I thought Mr. Keshav Prasad Maurya will take the seat because to me, he looked 
-    like a decent balanced person who would make peace.</p>
-   <p>>  As soon as I heard of Yogi Adityanath, who wore saffron, was a part of Hindu 
-    Yuva Wahini, delivered controversial speeches, I was really upset about the decision. </p>
-    <p>> I took him as anti secular. I presumed that muslims and minors will feel so suppressed 
-    in their own country because <br>I took Yogi as a man who will promote a particular religion 
-    and belief. </p>
-    <p>>  It would hamper the rich diversity. He ceased illegal slaughter houses
-     and banned cow meat.</p>
-     <p>> I believe all lives are equally important. To me, it was purely 
-     a protection of Hinduism.</p>
-    <P> Although, soon I learnt that only illegal slaughter houses are closed.He didn't undermine any 
-        caste; indeed gave equal opportunities.</P>
-    
-    <p> When I stepped outside my home I saw the cleaned roads, policemen on duty, traffic police managing 
-        vehicles, no filthy meat shops and anti romeo squads.
-    </p><p>
-    Furthermore the system is put to be reformed with more energy and enthusiasm.</p>
-    <br></p>
-    Then I learnt about his living style..</
-    <br><p>
-    <b>
-    A man who lived with bare minimum luxuries, rather none at all, ate simple, wore only 
-    saffron and no ACs in the hottest season too.<br> Worked for 16 hours. Worshipped Devi Maa 
-    and called for the poorest barber in the city to shave his head.</b></p>
-    <br><p>
-    Where would you get such a CM?
-    </p><br><audio controls>
-        <source src="Bharat Ka Baccha Baccha Shameless Mani Remix Azadi Album.mp3" type="audio/ogg">
-        <source src="Bharat Ka Baccha Baccha Shameless Mani Remix Azadi Album.mp3" type="audio/mpeg">
-      </audio><p name="proud">
-    Proud of you Yogiji.</p>
-      <div class="content">
-    <h2> JAI SHREE RAM</h2>
-    Regards</div> 
+  <h4>INTRODUCTION</h4>
+    <p> Subrahmanyam Jaishankar, widely known as S. Jaishankar, is an Indian diplomat and 
+        politician who served as the Minister of External Affairs of India from 2019 to 2023.  </p>
+    <p>With his extensive diplomatic experience and strategic vision, Jaishankar played a crucial role in shaping India's foreign policy and 
+        representing the country on the global stage.
+    </p>
+   <h4>Early Life and Education</h4>
+    <p>S. Jaishankar was born on January 9, 1955, in New Delhi, India. He comes from a distinguished family with a strong background 
+        in politics and diplomacy. 
+        His father, K. Subrahmanyam, was a renowned strategic affairs analyst, and his mother, Sulochana, was an author and classical dancer.
+        Jaishankar completed his schooling in Delhi and then pursued a Bachelor's degree in Economics from St. Stephen's College,
+         University of Delhi. 
+        He went on to earn a Master's degree in Political Science and an M.Phil
+        . and Ph.D. in International Relations from Jawaharlal Nehru University (JNU) in Delhi. </p>
+    <h4>Diplomatic Career</h4>
+    <P>S. Jaishankar joined the Indian Foreign Service in 1977 and served in various key positions throughout his career. 
+        He held diplomatic assignments in countries like Russia, Japan, Singapore, and the United States. His expertise in strategic affairs and
+         his ability to handle complex negotiations earned him a stellar reputation among his peers.</P>
+   <h4>Minister of External Affairs</h4>
+   <p>In May 2019, S. Jaishankar was appointed as the Minister of External Affairs of India under the leadership of Prime Minister Narendra Modi. 
+    As the chief architect of India's foreign policy, Jaishankar focused on promoting India's interests, safeguarding national security, 
+    and projecting India as a responsible global power.
+
+    During his tenure, Jaishankar successfully navigated complex international relations, including trade disputes, regional conflicts,
+     and global challenges
+     such as the COVID-19 pandemic. He actively engaged with countries around the world, fostering stronger diplomatic ties
+      and building strategic partnerships.</p>
+    <h4>Achievements and Contributions</h4>
+    <p>. Jaishankar's contributions to Indian diplomacy and foreign policy are numerous. Some of his notable achievements include:
+
+       <li>Strengthening India's strategic partnerships with major powers, including the United States, Russia, and Japan.</li>
+       <li> Playing a key role in resolving the Doklam border standoff between India and China.</li>
+        <li> India's diplomatic efforts to counter terrorism and promote regional security.</li>
+        <li>Leading India's successful campaign for a non-permanent seat on the United Nations Security Council for the term 2021-2022.</li>
+      <li> Pioneering the "Vaccine Maitri" initiative, which provided COVID-19 vaccines to countries around the world.</li>
+     </body> 
 </html>
